--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 body {
   margin: 0;
   font-family: Inter, sans-serif;
+  font-style: normal;
 }
 .header {
   background-color: #f55a5a;
@@ -27,4 +28,36 @@ body {
 .headerImg {
   width: 24px;
   height: 24px;
+}
+.card {
+  margin: 20px auto;
+  padding: 10px;
+  display: flex;
+  width: 470px;
+  height: 168px;
+  max-height: 168px;
+  gap: 15px;
+
+  /* border: 1px solid black; */
+}
+.cardImg {
+  max-width: 126px;
+  max-height: 168px;
+  border-radius: 5px;
+  object-fit: cover;
+}
+.cardBody {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  flex: 2 1 0;
+}
+.cardBody > p {
+  margin: 0px;
+  font-weight: 400;
+  font-size: 10.24px;
+}
+.cardTitle {
+  margin: 0;
+  
 }
